<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">


    <include layout="@layout/header" />

    <include
        layout="@layout/shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitobold"
                    android:hint="@string/terms"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/cbagree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:checked="false">

                </CheckBox>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/nunitobold"
                    android:text="@string/agreecheckbox"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/shapebuttons"
                    android:fontFamily="@font/nunitobold"
                    android:text="@string/next"
                    android:textColor="#fff"
                    android:textSize="30sp" />

        </LinearLayout>


</LinearLayout>
