<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:weightSum="1">


        <include
            layout="@layout/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/nunitobold"
                        android:gravity="center"
                        android:text="@string/profiledetails"
                        android:textColor="@color/black"
                        android:textSize="35sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        app:hintTextAppearance="@style/CustomTextAppearance">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitosemibold"
                            android:gravity="center"
                            android:text="@string/address"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etPermAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shapeform"
                            android:fontFamily="@font/nunitolight"
                            android:hint="Enter Permenant Address"
                            android:imeOptions="flagNoExtractUi"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:lines="4"
                            android:maxLength="19"
                            android:scrollHorizontally="true"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:targetApi="o" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        app:hintTextAppearance="@style/CustomTextAppearance">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitosemibold"
                            android:gravity="center"
                            android:text="@string/district"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <EditText
                            android:id="@+id/etMiddleName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shapeform"
                            android:fontFamily="@font/nunitolight"
                            android:hint="Enter District"
                            android:imeOptions="flagNoExtractUi"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:isScrollContainer="true"
                            android:maxLength="15"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:targetApi="o" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        app:hintTextAppearance="@style/CustomTextAppearance">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitosemibold"
                            android:gravity="center"
                            android:text="@string/taluka"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <EditText
                            android:id="@+id/etLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shapeform"
                            android:fontFamily="@font/nunitolight"
                            android:hint="Enter Taluka"
                            android:imeOptions="flagNoExtractUi"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:isScrollContainer="true"
                            android:maxLength="15"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:targetApi="o" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        app:hintTextAppearance="@style/CustomTextAppearance">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunitosemibold"
                            android:gravity="center"
                            android:text="@string/pincode"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp">

                        <EditText
                            android:id="@+id/etPinCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shapeform"
                            android:fontFamily="@font/nunitolight"
                            android:hint="Enter PIN CODE"
                            android:imeOptions="flagNoExtractUi"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:isScrollContainer="true"
                            android:maxLength="6"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:targetApi="o" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>